PyMaker/datas/object2/RawHTML/i17101/Python_DOC_referPages.why-is-the-following-string-literal-allowed.txt
<div class="post-text" itemprop="text">
<p>Generating different combination of strings while working on some issue, 
observe the following behavior</p>
<pre><code>In [3]: str = 'abcd'

In [4]: str
Out[4]: 'abcd'

In [5]: str = 'ab'cd'
------------------------------------------------------------
   File "&lt;ipython console&gt;", line 1
     str = 'ab'cd'
              ^
SyntaxError: invalid syntax


In [6]: str = 'ab''cd'

In [7]: str
Out[7]: 'abcd'
</code></pre>
<p>I'm aware of the condition where single quoted string can hold double quotes in between, and double quoted string can hold single quote in between.</p>
<p>Can someone please explain, why we are observing this behavior, where inside single quoted string two simultaneous single quotes are allowed, but single quote not.</p>
</div>
<div class="post-text" itemprop="text">
<p>Python implicitly concatenates nearby strings with nothing in between them. Observe:</p>
<pre><code>&gt;&gt;&gt; 'hel'  'lo'
'hello'
&gt;&gt;&gt; 'cat'        'egory'
'category'
&gt;&gt;&gt; 'ab''cd'
'abcd'
</code></pre>
<p>Strings with an odd number of one kind of quote are ambiguous and therefore not allowed.</p>
<pre><code>&gt;&gt;&gt; 'ab'cd'   # Here `cd` is a bareword and ' starts an unterminated string
  File "&lt;stdin&gt;", line 1
    'ab'cd'
         ^
SyntaxError: invalid syntax
&gt;&gt;&gt; 'ab\'cd'  # The middle single quote is escaped so this is OK
"ab'cd"
</code></pre>
<p>This can be a sort of "gotcha" when dealing with lists if you forget a comma:</p>
<pre><code>&gt;&gt;&gt; ['a', 'b', 'c' 'd', 'e']  # no comma between 'c' and 'd'
['a', 'b', 'cd', 'e']
</code></pre>
</div>
<span class="comment-copy">+1. On a side note: various languages show this behaviour. And in python you can even mix different string delimiters: <code>'aa' "bb" '''cc'''</code> parses just fine.</span>
<span class="comment-copy">Reference: <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-literal-concatenation" rel="nofollow noreferrer">docs.python.org/3/reference/…</a>.</span>
